# soroban-starter-kit

./: .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.es.md  README.md  SECURITY.md  deny.toml  justfile  mutants.toml  proptest.toml  rust-toolchain.toml
benches/: Cargo.toml
benches/benches/: escrow_ops.rs  token_ops.rs
contracts/ballot/: Cargo.toml  build.rs
contracts/ballot/src/: errors.rs  events.rs  lib.rs  storage.rs
contracts/common/: Cargo.toml
contracts/common/src/: lib.rs
contracts/escrow/: Cargo.toml  build.rs
contracts/escrow/scripts/: deploy.sh
contracts/escrow/snapshots/: error_codes.snap
contracts/escrow/src/: admin.rs  dispute.rs  errors.rs  events.rs  lib.rs  lifecycle.rs  prop_test.rs  queries.rs  storage.rs  test.rs
contracts/escrow/test_snapshots/test/: test_approve_delivery.1.json  test_approve_delivery_without_mark_delivered_fails.1.json  test_arbiter_resolve_to_buyer.1.json  test_arbiter_resolve_to_seller.1.json  test_bump_initialized_succeeds.1.json  test_bump_uninitialized_fails.1.json  test_cancel_after_funded_fails.1.json  test_cancel_by_seller_fails.1.json  test_deadline_passed.1.json  test_fund.1.json  test_fund_insufficient_funds.1.json  test_fund_twice_fails.1.json  test_get_escrow_info_uninitialized_fails.1.json  test_get_escrow_info_uninitialized_panics.1.json  test_get_escrow_info_uninitialized_returns_none.1.json  test_get_state_none_before_init.1.json  test_initialize.1.json  test_initialize_buyer_equals_arbiter_fails.1.json  test_initialize_buyer_equals_seller_fails.1.json  test_initialize_escrow.1.json  test_initialize_invalid_token_address.1.json  test_initialize_negative_amount.1.json  test_initialize_negative_amount_fails.1.json  test_initialize_past_deadline.1.json  test_initialize_seller_equals_arbiter_fails.1.json  test_initialize_twice.1.json  test_initialize_with_arbiters.1.json  test_initialize_zero_amount.1.json  test_initialize_zero_amount_fails.1.json  test_invalid_mark_delivered_from_created.1.json  test_is_deadline_passed.1.json  test_mark_delivered.1.json  test_mark_delivered_by_buyer_fails.1.json  test_raise_dispute.1.json  test_request_refund_before_deadline_fails.1.json  test_resolve_dispute_to_buyer.1.json  test_resolve_dispute_to_seller.1.json  test_resolve_dispute_wrong_state_fails.1.json  test_seller_raises_dispute.1.json  test_update_amount.1.json  (+2 more)
contracts/oracle/: Cargo.toml
contracts/oracle/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/subscription/: Cargo.toml
contracts/subscription/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/swap/: Cargo.toml
contracts/swap/scripts/: deploy.sh
contracts/swap/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/token/: Cargo.toml
contracts/token/scripts/: deploy.sh
contracts/token/snapshots/: error_codes.snap
contracts/token/src/: admin.rs  allowance.rs  errors.rs  events.rs  lib.rs  prop_test.rs  storage.rs  test.rs  token_interface.rs
contracts/token/test_snapshots/test/: test_accept_admin_wrong_address_fails.1.json  test_accept_admin_wrong_address_fails.2.json  test_admin_burn_decrements_total_supply.1.json  test_allowance_expiry.1.json  test_allowance_expiry_no_allowance.1.json  test_approve.1.json  test_approve_and_transfer_from.1.json  test_approve_revoke.1.json  test_balance_of_distinguishes_unknown_from_zero.1.json  test_batch_mint.1.json  test_batch_mint_zero_amount.1.json  test_burn.1.json  test_burn_from.1.json  test_burn_from_expired_allowance.1.json  test_burn_from_insufficient_allowance.1.json  test_burn_more_than_total_supply_returns_overflow.1.json  test_cancel_admin_transfer.1.json  test_expired_allowance.1.json  test_initialize.1.json  test_initialize_twice.1.json  test_mint.1.json  test_mint_overflow.1.json  test_mint_zero_amount.1.json  test_set_admin.1.json  test_set_admin_before_initialize_fails.1.json  test_total_supply.1.json  test_transfer.1.json  test_transfer_from_preserves_expiration.1.json  test_transfer_negative_amount.1.json  test_transfer_self_is_noop.1.json  test_transfer_zero_amount.1.json  test_two_step_admin_transfer_success.1.json  test_unauthorized_admin_burn_fails.1.json  test_unauthorized_set_admin_fails.1.json
contracts/vesting/: Cargo.toml
contracts/vesting/proptest-regressions/: test.txt
contracts/vesting/src/: errors.rs  events.rs  lib.rs  prop_test.rs  storage.rs  test.rs
contracts/vesting/test_snapshots/test/: prop_claim_after_end_yields_full.1.json  prop_claim_after_end_yields_full.10.json  prop_claim_after_end_yields_full.100.json  prop_claim_after_end_yields_full.101.json  prop_claim_after_end_yields_full.102.json  prop_claim_after_end_yields_full.103.json  prop_claim_after_end_yields_full.104.json  prop_claim_after_end_yields_full.105.json  prop_claim_after_end_yields_full.106.json  prop_claim_after_end_yields_full.107.json  prop_claim_after_end_yields_full.108.json  prop_claim_after_end_yields_full.109.json  prop_claim_after_end_yields_full.11.json  prop_claim_after_end_yields_full.110.json  prop_claim_after_end_yields_full.111.json  prop_claim_after_end_yields_full.112.json  prop_claim_after_end_yields_full.113.json  prop_claim_after_end_yields_full.114.json  prop_claim_after_end_yields_full.115.json  (+1284 more)
contracts/wrapped-token/: Cargo.toml
contracts/wrapped-token/src/: errors.rs  events.rs  lib.rs  storage.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: escrow_initialize.rs  token_fuzz.rs  token_mint_burn.rs
tests/: Cargo.toml
tests/src/: escrow_lifecycle.rs  lib.rs
tests/test_snapshots/: test_escrow_with_capped_token.1.json  test_full_escrow_lifecycle_arbiter_resolves_to_buyer.1.json  test_full_escrow_lifecycle_arbiter_resolves_to_seller.1.json  test_full_escrow_lifecycle_cancel_before_fund.1.json  test_full_escrow_lifecycle_happy_path.1.json  test_full_escrow_lifecycle_refund_after_deadline.1.json  test_full_escrow_lifecycle_with_sac_token.1.json  test_token_allowance_expiry_in_integration.1.json
tests/tests/: integration.rs
(+950 files in other folders)
