[workspace]
members = ["contracts/common", "contracts/token", "contracts/escrow"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "=21.7.7"
soroban-common = { path = "contracts/common" }

[workspace.metadata]
name = "soroban-contract-templates"
description = "Production-ready Soroban smart contract templates"
authors = ["Soroban Templates Contributors"]
license = "Apache-2.0"
