[workspace]
members = ["contracts/common", "contracts/token", "contracts/escrow"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "=21.7.7"
soroban-common = { path = "contracts/common" }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1

[workspace.package]
name = "soroban-contract-templates"
description = "Production-ready Soroban smart contract templates"
authors = ["Soroban Templates Contributors"]
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
