[package]
name = "contract-benchmarks"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
publish = false

[[bench]]
name = "escrow_ops"
harness = false

[[bench]]
name = "token_ops"
harness = false

[dev-dependencies]
criterion = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-escrow-template = { path = "../contracts/escrow" }
soroban-token-template = { path = "../contracts/token" }

[lints]
workspace = true
