[package]
name = "soroban-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[lints]
workspace = true

# Uncomment to use a local or forked version of soroban-sdk for development
# [patch.crates-io]
# soroban-sdk = { path = "/path/to/local/soroban-sdk" }
# soroban-sdk = { git = "https://github.com/your-fork/soroban-sdk", branch = "your-branch" }