[package]
name = "soroban-escrow-template"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "A production-ready Soroban escrow contract template"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-common = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1"


[[bin]]
name = "soroban-escrow-template"
path = "src/bin/main.rs"

[lints]
workspace = true