[package]
name = "soroban-escrow-template"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "A production-ready Soroban escrow contract template"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-common = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = { workspace = true }


[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[lints]
workspace = true

# Uncomment to use a local or forked version of soroban-sdk for development
# [patch.crates-io]
# soroban-sdk = { path = "/path/to/local/soroban-sdk" }
# soroban-sdk = { git = "https://github.com/your-fork/soroban-sdk", branch = "your-branch" }