[package]
name = "soroban-oracle-template"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "A production-ready Soroban price oracle consumer contract template"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-common = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
