[package]
name = "soroban-token-template"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "A production-ready Soroban token contract template"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-common = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1"


[[bin]]
name = "soroban-token-template"
path = "src/bin/main.rs"

[lints]
workspace = true