[package]
name = "soroban-vesting-template"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "A production-ready Soroban token vesting contract template"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-common = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = { workspace = true }

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"
doc = false

[lints]
workspace = true
